syntax = "proto3";

package ai.lzy.v1.allocator;

option java_outer_classname = "DiskServiceApi";
option java_package = "ai.lzy.v1";

import "ai/lzy/v1/allocator/disk.proto";
import "ai/lzy/v1/long-running/operation.proto";
import "ai/lzy/v1/long-running/option.proto";


service DiskService {
  rpc CreateDisk (CreateDiskRequest) returns (ai.lzy.v1.longrunning.Operation) {
    option (ai.lzy.v1.operation) = {
      metadata: "CreateDiskMetadata"
      response: "CreateDiskResponse"
    };
  }

  rpc CloneDisk (CloneDiskRequest) returns (ai.lzy.v1.longrunning.Operation) {
    option (ai.lzy.v1.operation) = {
      metadata: "CloneDiskMetadata"
      response: "CloneDiskResponse"
    };
  }

  rpc DeleteDisk (DeleteDiskRequest) returns (ai.lzy.v1.longrunning.Operation) {
    option (ai.lzy.v1.operation) = {
      metadata: "DeleteDiskMetadata"
      response: "DeleteDiskResponse"
    };
  };
}

message CreateDiskRequest {
  string user_id = 1;
  oneof DiskDescription {
    DiskSpec disk_spec = 2;
    ExistingDisk existing_disk = 3;
  }
  message ExistingDisk {
    string disk_id = 1;
  }
}

message CreateDiskMetadata {
  string disk_id = 1;
}

message CreateDiskResponse {
  Disk disk = 1;
}

message CloneDiskRequest {
  string user_id = 1;
  string disk_id = 2;
  DiskSpec new_disk_spec = 3;
}

message CloneDiskMetadata {
  string disk_id = 1;
}

message CloneDiskResponse {
  Disk disk = 1;
}

message DeleteDiskRequest {
  string disk_id = 1;
}

message DeleteDiskMetadata {}

message DeleteDiskResponse {}
