syntax = "proto3";

package ai.lzy.v1.allocator;

option java_outer_classname = "VolumeApi";
option java_package = "ai.lzy.v1";

message Volume {
  string name = 1;
  oneof VolumeType {
    DiskVolumeType disk_volume = 2;
    HostPathVolumeType host_path_volume = 3;
    NFSVolumeType nfs_volume = 4;
  }
}

message VolumeRequest {
  string id = 1;
  string name = 2;
  oneof VolumeType {
    DiskVolumeType disk_volume = 3;
    HostPathVolumeType host_path_volume = 4;
    NFSVolumeType nfs_volume = 5;
  }
}

message DiskVolumeType {
  string disk_id = 1;
  int32 size_gb = 2;
  AccessMode access_mode = 3;
  StorageClass storage_class = 4;

  enum AccessMode {
    UNSPECIFIED = 0;
    READ_WRITE_ONCE = 1;
    READ_WRITE_ONCE_POD = 2;
    READ_WRITE_MANY = 3;
    READ_ONLY_MANY = 4;
  }

  enum StorageClass {
    STORAGE_CLASS_UNSPECIFIED = 0;
    SSD = 1;
    HDD = 2;
  }
}

message HostPathVolumeType {
  string path = 1;
  HostPathType host_path_type = 2;

  enum HostPathType {
    UNSPECIFIED = 0;
    DIRECTORY_OR_CREATE = 1;
    DIRECTORY = 2;
    FILE_OR_CREATE = 3;
    FILE = 4;
    SOCKET = 5;
  }
}

message NFSVolumeType {
  string server = 1;
  string share = 2;
  bool read_only = 3;
  repeated string mount_options = 5;
}

message Mount {
  string volume_name = 1;
  string mount_path = 2;
  bool read_only = 3;
  MountPropagation mount_propagation = 4;

  enum MountPropagation {
      UNSPECIFIED = 0;
      NONE = 1;
      HOST_TO_CONTAINER = 2;
      BIDIRECTIONAL = 3;
  }
}
