syntax = "proto3";


service VolumeManager {
}